--- a/src/style.css
+++ b/src/style.css
@@ -290,7 +290,7 @@ div#content{
 }
 
 .projectEdit{
-    display: none;
+    display: flex;
     margin-left: 2rem;
     align-self: center;
     font-size: 2rem;
@@ -310,7 +310,7 @@ div#content{
 }
 
 .projectRemove{
-    display: none;
+    display: flex;
     font-size: 1rem;
     align-self: center;
     align-items: center;
@@ -427,17 +427,32 @@ div#content{
 
 .toDoItem .completeButton{
     position: absolute;
+    display: flex;
+    height: 1.3rem;
+    width: 1.3rem;
     left: .8rem;
     padding: .5rem;
-    font-size: 1rem;
+    /* font-size: 1rem; */
     border: solid black 2px;
     background-color: white;
     border-radius: 2rem;
+    align-items:center;
+    justify-content: center;
 }
 
-.completeButton .svg{
-    height: 1rem;
-    width: 1rem;
+.completeButton > svg{
+    /* display: flex; */
+        /* flex: 1; */
+     /* align-items: center;
+     justify-self: center;
+     position: absolute; */
+     min-height: 1.2rem;
+     min-width: 1.2rem;
+     /* border: solid black 1px; */
+}
+
+.completed{
+    background-image: linear-gradient(gray, gray);
 }
 
 .toDoItem .changeButtons{
