--- a/src/style.css
+++ b/src/style.css
@@ -93,6 +93,7 @@ div.sidebar{
     border-bottom:solid black 2px;
 }
 
+
 #projects{
     /* position: relative; */
     display: flex;
@@ -232,11 +233,98 @@ div#content{
     width: 100%;
     height: 100%;
     background-color: rgb(240, 240, 240);
-    /* border: solid red 2px; */
+    border: solid red 2px;
     display: flex;
     flex-direction: column;
     /* justify-self: center; */
+
 }
+
+.projectsLabel{
+    width: 95%;
+    font-size: 4rem;
+    border-bottom: solid 3px black;
+    /* border: black solid 1px; */
+    padding: .7rem;
+    align-self: center;
+    margin-top: 1rem;
+    /* font-weight: bold; */
+}
+
+.homeProjectWrapper{
+    /* position: relative; */
+    display:flex;
+    flex-direction: column;
+    /* height: fit-content; */
+    /* flex-direction: row; */
+    width: 95%;
+    /* min-width: 100%; */
+    /* background-color: rgb(120, 78, 136); */
+    /* border: solid rgb(255, 255, 255) 1px; */
+    /* justify-content: space-between; */
+    /* overflow: hidden; */
+    /* background-image: linear-gradient(rgb(235, 235, 235), rgb(204, 204, 204)); */
+    /* padding: .7rem 0rem; */
+    /* padding-left: .2rem; */
+    margin-top: .1rem;
+    /* border-radius: 1rem; */
+    align-self: center;
+    justify-content: center;
+    align-items: center;
+    border-bottom: solid white 1px;
+}
+
+.homeProjectInfo{
+    position: relative;
+    flex: 1;
+    display: flex;
+    /* border: solid green 2px; */
+    /* border-radius: 2rem; */
+    border: solid rgb(94, 255, 0) 2px;
+    background-image: linear-gradient(rgb(235, 235, 235), rgb(204, 204, 204));
+    /* margin-top: 3rem; */
+    /* padding: 1rem; */
+    padding: .7rem  0rem 0rem 0rem;
+    width: 100%;
+    /* align-self: center; */
+    align-content: center;
+    /* margin-bottom: .4rem; */
+    /* background-image: linear-gradient(rgb(235, 235, 235), rgb(240, 240, 240)); */
+    /* justify-self: center; */
+}
+
+.homeProjectInfo:hover{
+    background-image: linear-gradient(rgb(204, 204, 204), rgb(235, 235, 235));
+}
+
+.homeProjectTitle{
+    flex:2;
+    border: solid purple 1px;
+    font-size: 2rem;
+}
+
+.homeProjectDueDate{
+    flex:1;
+    border: blue solid 1px;
+    font-size: 2rem;
+}
+
+.projectExpandButton{
+    font-size: 2rem;
+}
+
+.projectToDoItems{
+    display: flex;
+    flex-direction: column;
+    border: solid black 1px;
+    border-top: solid black 2px;
+    align-self: center;
+    width: 95%;
+    max-height: 95%;
+    overflow: scroll;
+    margin-bottom: 1rem;
+}
+
 
 .projectInfo{
     position: relative;
